--- a/kube/virtualservice-delay.yaml
+++ b/kube/virtualservice-delay.yaml
@@ -1,26 +1,21 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
-  name: todoapp-destination
+  name: recommender-dr
 spec:
-  host: todoapp
+  host: recommender
   subsets:
   - name: v1
     labels:
       version: v1
-  - name: v2
-    labels:
-      version: v2
 ---
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: todoapp-vs
+  name: recommender-vs
 spec:
   hosts:
-  - "*"
-  gateways:
-  - todoapp-gateway
+  - recommender
   http:
   - fault:
       delay:
@@ -29,7 +24,7 @@ spec:
         fixedDelay: 5s
     route:
     - destination:
-        host: todoapp
-        subset: v2
+        host: recommender
+        subset: v1
         port:
           number: 80
